<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBG"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_details">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movietitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20dp"
                android:layout_below="@+id/movietitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:text="@string/plot"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_below="@id/title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20dp"
                android:layout_below="@+id/plot"/>


            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20dp"
                android:layout_below="@+id/rating"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relase"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:text="@string/relase"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_below="@id/userrating"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releasedate"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20dp"
                android:layout_below="@+id/relase"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>